October 2013 newsletter (DRAFT)

--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -5,135 +5,107 @@
 % Head
 
 \title{My Days at the Home of the Merlin Engine}
-\subtitle{Part 2}
+\subtitle{Part 3}
 \author{Richard Lodge}
 
 \maketitle
 
-As a new employee, part of my Rolls-Royce induction process was to get
-to know some of the production and other R-R facilities around
-Derby. After a few weeks of working in the Overheads Department, it
-was suggested that it was time for me to go visiting. I was happy to
-do this because any opportunity to leave the main accounting office
-for a time was to be jumped at.
+``Lodge, the expenses on the charity wagon go to Miss Prod''. What was a
+charity wagon and who was Miss Prod? I was working in the Overheads
+Department of the Rolls-Royce Aero Engine Division in Derby. As a
+young, ambitious accountant, I did not want to admit to the people in
+the department that I did not know what they were talking about. I was
+conscious that I had spent several weeks of initiation under the
+guidance of the old timer, Les Hart, and should now know something
+about the company. I was sitting in front of a huge leather bound
+ledger where accounting information was recorded. Eventually, by
+listening to other people talking around me, I established that a
+charity wagon was a much prized company car and that Miss Prod was not
+a person but referred to ``miscellaneous production'' work at R-R. Put
+in plain English, the sentence meant that the cost of repairing this
+individual's car was to be charged to a special account in the
+miscellaneous production section of the overheads. There was so much
+to learn!  I was completely bewildered. Each day was a challenge and
+the thought that aero engines were produced in the surrounding
+factories seemed very far away.
 
-Rolls-Royce had an internal bus service to take employees between
-sites. To catch the bus, an employee went down to the door of the
-building and waited for a bus to turn up -- no booking or written
-schedule.  I remember my first trip on a company bus. It took me about
-half an hour of asking people around how to get to the site I
-wanted. I was beginning to realize that much of the operations of R-R
-were not written and were passed around by word of mouth and the long
-time employees passing on information to the newcomers. Years later,
-when working in Northern Canada in native communities I once again
-came across this way of handing down unwritten information from the
-Elders to the younger people. Before starting my job at R-R I had
-believed that the company would be highly organized and disciplined.
+On being placed in the Overheads Department, I was given an internal
+mail address. The company was so large that a worldwide internal mail
+system had been established and I rapidly found out that I was at the
+bottom of the heap. My address was JD/JS/LOD which meant that JS was
+my immediate supervisor and JD was his boss. If you were important in
+the company, your mail would come to you with just your initials such
+as JD. Everybody with any ambition wanted to get a single initials
+mailing address. If you were really close to God, such as a director
+of the company, your mailing address would be Psn for the CEO, Sir
+Denning Pearson, or DPH for David Huddie, the Director of Engineering.
 
-I finally managed to find my way to the building I was due to visit.
-It was the Foundry. I was introduced to the men who worked in this
-evil smelling place. Each of the major engine parts was individually
-cast -- there was no automation and a good foundry man could put
-together the sand and other parts needed for the casting, mostly from
-memory. During WW2 the foundry had concentrated entirely on the
-production of military engines, mostly Merlins.  By the time I was
-shown round the place there was a bewildering conglomeration of parts
-being made for piston, turbo prop and jet engines.
+There were continuous battles between the engine development engineers
+and the accountants. When the engineers spent money, they tried
+wherever possible to avoid having it charged against their
+budget. Their favourite game was to charge the cost into the overheads
+where it would be lost in a mass of other expenditure such as emery
+paper and toilet rolls. Our task was to catch them at their game and
+reallocate the expense back to them. The development engineers were
+very skilled at this part of their work and became so good at it that
+they were able to hide major cost overruns, sometimes
+indefinitely. Little did I realize that I was helping to perpetuate
+the culture that was one of the causes of R-R going bust a few years
+later.
 
-As a young accountant I was expected to understand how the paperwork
-and accounting for all this worked. It was a daunting thought and I
-left the Foundry feeling overwhelmed.  Throughout my time at R-R I
-never became comfortable dealing with the Foundry -- everything seemed
-to be so imprecise and up to the skill on the foundry man. Each time I
-went there I tried to find out how the men knew how to produce the
-same casting every time and the answer was always the same: "Oh, we
-just know what to do".  Many of these comments were probably made to
-try to make a young guy in a suit from the office look foolish but
-they were also largely true!
+In the 1960s R-R was a paternalistic organization, steeped in
+tradition, still operating with many cost-plus government contracts,
+vast amounts of paper and virtually no computers. The Ministry of
+Aviation would regularly send auditors into the company to check how
+public money was being spent. These gentlemen had a permanent office
+allocated to them and would regularly attack the expenses recorded by
+the Overheads Department. When this happened, we and the development
+engineers became great buddies for a short time. Our unspoken job was
+to confuse the government auditors as much as possible so that they
+would not report back to their masters that things were not as they
+should be. We became quite good at our confusion duties. It was not a
+difficult job because we were frequently confused by all the paper and
+numbers as well.
 
-Sitting in the Overheads Department I saw many of the invoices for
-purchases. I could hardly believe it when I saw invoices going through
-for payment for dozens of chickens. The delivery was never to the
-works canteen but always to the R-R site at Hucknall, a short distance
-outside Derby. My supervisor told me that the chickens were fired at
-engines on test. I did not believe him until I managed to find a
-pretext to visit Hucknall. After another challenge finding the works
-bus to get me there, I arrived at the site and was shown round and all
-was revealed. Dead chickens ending their time on earth being used to
-test the strength of compressor blades in an engine on full power
-seemed to me to be a very imprecise way of testing a jet
-engine. Another lesson learned -- not everybody was trying to make me
-look foolish all the time.
+R-R continued to deliver new aero engines to customers and I gradually
+started to understand what I was doing. After a few months, my
+supervisor was promoted and I was appointed supervisor of the
+Overheads Department, much to the disgust of many of the people in the
+department. Although my pleasure was to be short-lived, I was
+delighted to get this promotion. By the time of my promotion, I had
+been around many of the facilities of R-R both in the Derby area and
+in Scotland. I felt that I knew my way around the company.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{bird_gun.eps}
-   %caption of the figure 
-   \caption*{\small \em A 1960s chicken gun as used at Hucknall .}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:birdgun}
-\end{figure}
+Almost everyone working in the Overheads Department, including the
+three section leaders under me, were older and more experienced than
+I. They did not like this young upstart accountant becoming their
+boss. Underground warfare started between us. Several of the men had
+fought through WW2 and were well practiced at the gentle art of ``dumb
+insolence''. The three section leaders came to me one day and told me
+they really disliked me being their boss. This was not good for my
+ego. I suggested to them that the four of us should go out after work
+and have a beer and that on this occasion I would just be one of them
+and not their boss. I bought the first round of beer and they really
+tore into me. After several more rounds of beer, we agreed to a truce
+and decided on a new strategy. I would stop trying to micromanage them
+and they would stop their dumb insolence. Of course, they never
+admitted that they were practicing dumb insolence. Life became much
+better after our beers. Miss Prods, charity wagons, drop-offs and all
+the other R-R jargon became normal for me with the active co-operation
+of my three section leaders.
 
-The visits to the various R-R sites around Derby took several months
-to complete. I had to have a good reason to leave my office and go
-visiting, particularly as I was now working in a departmental
-position. Eventually another bus trip to the large new complex at
-Sinfin was required or I somehow managed to talk my way into finding
-it necessary to go there. Sinfin, among many other things, housed the
-main engine test beds and I was curious to find out what happened
-there. Unlike the evil smelling Foundry, Sinfin was clean, new and had
-plenty of windows.
+Apart from the pay rise upon my promotion I had now moved up in the
+company mailing system and my address had become JD/LOD. This probably
+helped my head to swell until the three section leaders brought me
+rapidly back to earth.
 
-The men in the test shop told me about the engine testing process. I
-was still new to R-R and had a lot to learn. After a while I was asked
-if I would like to see an engine on test. Of course I said yes; it
-seemed interesting. With little experience I did not realize that an
-aero engine on test is nothing much to see. One of the men said he
-would take me to a Conway engine on test. He said he would open the
-test bed door to let me see the engine and that I would find it
-somewhat noisy. He stood behind the door, opened it and let me look
-inside at the engine on full power. I now wear hearing aids. Health
-and safety were two words not used in those days when many of the men
-were used to serving in the war. This was 1960s Britain.
+I must have learnt a few of life's lessons about people management
+because when I was again promoted, my three section leaders tried to
+encourage me to refuse the promotion. No chance. I was once again
+moving up the mailing system and would in future have my mail
+addressed to LOD, without a more senior person's initials appearing
+before mine. I was going in the right direction.
 
-I have always enjoyed travelling and would jump at any opportunity to
-travel to a new place. After a few months it was suggested to me that
-I should visit the Scottish factory at Hillington near Glasgow. I
-asked how I should get there. ``Oh. You might as well fly. There is a
-flight every day that leaves in the morning and comes back in the
-afternoon.'' I had never flown before.
-
-The UK being a small country, everybody went around by train.  As
-usual, I was given very little information and told to get myself to
-East Midlands airport early on the appointed morning, where a ticket
-would be waiting for me. On this occasion I had the good sense to take
-my own car to the airport and did not get lost. I expected to find a
-plane waiting, painted in some sort of Rolls-Royce colours. Instead,
-after some questioning, I found out that I would be travelling on a
-small airline, called British Midland, which ran a service, mainly for
-R-R personnel, between the Derby East Midlands Airport, near Derby and
-Glasgow factories Airport. Far from being in some interesting plane
-connected with R-R, I found that our plane was an old DC3 which had
-seen better days.I duly got on the plane and was somewhat nervous
-flying on my first flight.
-
-An hour later we arrived in Scotland, also my first trip over the
-Border, and I spent the day being shown around the factories and
-offices.  I remember very little about the day but vividly remember
-the flight back to Derby. It must have been in the winter because it
-was getting dark as I boarded the plane around 5.00 pm. Seating was
-first come first served and all the old sweats travelling knew what to
-do. I ended up on the back row near the cargo area. The main thing I
-remember was the crew having a fierce argument about the load on the
-plane which was full. The discussion centred around the amount of
-cargo which could be taken on the flight. I was quite relieved to get
-back to Derby in one piece.
-
-In the next article I will describe how I worked hard to climb the
-hierarchy at R-R and learnt in an uncomfortable way some lessons on
-people management.
 
 
 \begin{footnotesize}
