--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -1,7 +1,7 @@
 
 % Template PNSAC newsletter - Miscellany
 % Language: Latex
-
+\vspace{25mm}
 
 \title{Calendar of Events}
 
@@ -15,9 +15,7 @@
 % {\normalfont\color{red}Annual General Meeting}\\
 %June 8, 2013      \> Board of Directors' Meeting (post AGM)\\
 %June 27, 2013     \> Board of Directors' Meeting (first meeting of new Board)\\
-September 12, 2013     \hspace{20mm}\= Board of Directors' Meeting (to be confirmed)\\
-September 21, 2013     \> Members' Quarterly Meeting (to be confirmed)\\
-November 28, 2013      \> Board of Directors' Meeting (to be confirmed)\\
+November 28, 2013     \hspace{20mm}\= Board of Directors' Meeting (to be confirmed)\\
 December 7, 2013       \> Members' Quarterly Meeting (to be confirmed)\\
 March 20, 2014         \> Board of Directors' Meeting (to be confirmed)\\
 March 29, 2014         \> Members' Quarterly Meeting (to be confirmed)
