--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -9,67 +9,53 @@
 
 \maketitle
 
-Canada Day is now behind us.  We had an excellent day with a good
-number of our volunteers showing off the North Star to the general
-public. Judging by the activity around the plane all the day, we have
-now developed a display format which is interesting to visitors.
-Canada Day was the only day this year when the plane was on display to
-the general public.
+During the past three months we have moved steadily forward with the
+restoration of the North Star.  Our progress has been somewhat held up
+by lack of available volunteers.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{canadaday_visitor.eps}
-   %caption of the figure 
-   \caption*{\small \em Showing off the North Star on Canada Day -- an
-   impressed visitor examines the cockpit.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:canadaday}
-\end{figure}
+Our Association has two distinct and very important sides.  First and
+foremost we are a group whose interest is in the North Star and the
+restoration and preservation of the plane at the Museum.  Secondly,
+over the years, we have developed a strong social side to the
+Association where volunteers and other members can join in interesting
+events centered around aviation. Elsewhere in this issue of the
+Chronicle you will find a description by Bill Tate our Vice President,
+of the very successful trip on October 4 to the Navcan Air Control
+Centre and to the Bombardier factory in Montr\'{e}al.
 
-On June 27, in co-operation with the Museum, who hosted the event, we
-showed off the plane to a group of donors attending the Donor
-Appreciation Evening.  This was a successful evening which is likely
-to be repeated.
+After 10 years of restoration work on the North Star we recognize that
+we must review our progress and develop a plan for the rest of the
+work on the plane.  There will be three aspects to this review.  Our
+first task will be to identify the major sections of the project and
+develop ways of actually carrying out the restoration.  The
+undercarriage of the plane is a particularly complicated challenge.
+We then need to prepare a plan with projected timelines for completing
+each part of the work.  Our third task will be to estimate costs and
+to develop ideas for financing it.  During this process we must also
+ensure that we will have sufficient qualified volunteers to get it
+done.
 
-In my last Notes from the President, I referred to plans for
-celebrating the 10th anniversary of the founding of the Project North
-Star Association.  This should have taken place around June 24.
-Unfortunately, the event passed without us being able mark the
-day. This was mainly due to situations beyond our control.
+Before the end of November we are hoping to have meetings with the
+senior management of the Museum to update planning of all the tasks
+above.  The end result of this should be a documented project plan and
+a new Memorandum of Understanding between the Canada Aviation and
+Space Museum and the Project North Star Association of Canada.
 
-Our 2013 AGM was held on June 8, and all the existing directors were
-re-elected.  This will enable the directors, who have now become
-experienced, to concentrate on long-term matters.
+At times our progress on the restoration of the North Star may appear
+to Association members to be somewhat slow.  Unlike other
+organizations in Canada such as Vintage Wings in Gatineau or the
+Canada Warplane Heritage Museum in Hamilton, PNSAC cannot make
+decisions about the future of the North Star on its own.  As an
+Association working with a Federal Government institution we are often
+affected by decisions not related to the work we do.  This can at
+times provide interesting challenges.
 
-The actual work on the restoration of the plane is going very well, as
-reported elsewhere in this newsletter. The major issue facing the
-Board in the next year will be to consider how to secure the future of
-PNSAC, both in terms of volunteers and the funding of restoration
-work.
-
-We have now reached a point where it is necessary to update our
-Memorandum of Understanding (MOU) with the Museum and our work plan
-for completing the restoration of the plane.  Our volunteers have
-already worked over 60,000 hours on the project and we expect to work
-a similar number of hours before the restoration is completed.
-
-There have been several informal meetings to discuss our future
-operations and the opportunities available for new volunteers.  Within
-the next few weeks we are expecting to meet with the Director General
-of the Aviation Museum and members of his staff to work on the MOU
-update.
-
-Later this month we are meeting with senior management of the Museum
-Foundation, the body charged with corporate fundraising for the Canada
-Science and Technology Museums Corporation, to discuss how PNSAC can
-work with the Foundation to raise funds for the North Star restoration
-and the museums in general.
-
-With the initiatives above, we are hoping in the next few months to
-consolidate our position as an important organization working with the
-Aviation Museum.
+In conclusion, I would say that the Directors are working hard with
+the Museum management to move our project forward even though at times
+it may appear to be very difficult.  I hope that I will be able to
+report significant progress in the next issue of the Chronicle.  In
+the meantime we have some interesting events in the planning stages on
+the social side of the Association.  Stay tuned.
 
 
 \begin{footnotesize}
