--- a/pnsac/newsletter/article_Special.tex
+++ b/pnsac/newsletter/article_Special.tex
@@ -4,31 +4,53 @@
 
 % Head
 
-\title{Special Presentation}
+\title{PNSAC Merchandise}
 %% \author{Drew Hodge}
 
 \maketitle
 
-\end{multicols}
+%\end{multicols}
 
 \begin{figure}[ht!]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=1.0]{roger_button.eps}
+   \includegraphics[scale=1.0]{fleece_YOW7578.eps}
    %caption of the figure 
-   \caption*{\small \em "Do I really have to wear it?"}
+   \caption*{\small \em PNSAC winter apparel}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:rbutton}
+   \label{fig:merchandise}
 \end{figure}
 
 
 
-At a Board meeting on March 20, the directors presented a PNSAC golf
-shirt to our hard-working Secretary, Roger Button. Our Vice President
-Bill Tate made the presentation; the joy and gratitude are evident on
-Roger's face.
+The first frost warnings on the Weather Channel are reminders that
+fall and winter are just around the corner. Keep warm on those frosty
+fall days with a PNSAC toque and sweatshirt. We can also take
+individual orders for the micro fleece vests shown in the photo on the
+left, and if you're looking for early Christmas presents, how about a
+coffee mug or a t-shirt?
 
+Have a look at our Facebook page,
+{\normalfont\color{blue}\texttt{\href{https://www.facebook.com/media/set/?set=a.610706705637878.1073741851.284829008225651&type=1}{PNSAC
+      Merchandise}}}, to see what we're offering, and place your
+orders by sending an email message to the following address
+\email{pnsac.merchandise@gmail.com}.
+
+For members in the Ottawa-Gatineau region, you can arrange to pick up
+your merchandise at the Canada Aviation and Space museum any Monday or
+Tuesday, between 10:00 AM and 3:00 PM. We can also ship your purchases
+to you for an extra fee. Please specify museum pickup or shipping with
+your order.
+
+Merchandise is also available during our Quarterly Meetings
+at CAVM.
+
+Look forward to hearing from you.
+
+``The Merchandise Committee''
+
+ 
 
 
 
@@ -36,7 +58,7 @@ Roger's face.
     \raggedleft PNSAC\\
 \end{footnotesize}
 
-\begin{multicols}{2}
+%\begin{multicols}{2}
 
 % End of text.
 
