--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -44,7 +44,7 @@
 
 \volume{9} % \volnumber{1}
 \issue{4}
-\date{September 2013} 
+\date{October 2013} 
 \titlepage
 
 
@@ -83,16 +83,16 @@
 %\pagebreak
 
 % Feature article
-%\begin{article}                 
-%	\input{article_Feature2} 
-%\end{article}
+\begin{article}                 
+	\input{article_Feature2} 
+\end{article}
 
 %\pagebreak
 
 % Feature article
-%\begin{article}
-%	\input{article_Feature3} 
-%\end{article}
+% \begin{article}
+% 	\input{article_Feature3} 
+% \end{article}
 
 %\pagebreak
 
@@ -116,18 +116,23 @@
 
 %\vspace{35 mm}
 
-\begin{article}                 
-	\input{article_RecentEvents}
-\end{article}
+% \begin{article}                 
+% 	\input{article_RecentEvents}
+% \end{article}
 
-\pagebreak
+%\pagebreak
 
 % Special article 
 \begin{article}
 	\input{article_SpecialEvents} 
 \end{article}
 
-\pagebreak
+% Special article 
+\begin{article}
+	\input{article_Special} 
+\end{article}
+
+%\pagebreak
 
 
 % Forthcoming events ................................................. %
@@ -149,6 +154,18 @@
 %\textit{All photos by Guy Poirier.}
 
 \end{document}
+
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{engine3_prop_cowl.eps}
+%    %caption of the figure 
+%    \caption*{\small \em John Thibert with the propeller cowl for
+%      engine nr 3.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:engine3propcowl}
+% \end{figure}
 
 %%% Local Variables: 
 %%% mode: latex
