--- a/pnsac/newsletter/article_SpecialEvents.tex
+++ b/pnsac/newsletter/article_SpecialEvents.tex
@@ -4,14 +4,25 @@
 % Language: Latex
 
 
-\title{Special Events}
-%\subtitle{Visit to the Canada Aviation and Space Museum}
-%\author{Bill Tate}
+\title{Recent Special Events}
+%\subtitle{Visit to Nav Canada Montreal A.C.C. and Bombardier}
+\author{Bill Tate}
 
 \maketitle
 
-\section{Third Annual Golf Day at Loch March -- Wednesday August 14, 2013}
-\label{sec:golf}
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=1.5]{loch_march.eps}
+%    %caption of the figure 
+%    %\caption*{\small \em North Star engine 3.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:logo}
+% \end{figure}
+
+\section{Loch March Golf Day}
+\label{golf}
 
 \begin{figure}[htbp]
    \vspace{2em}
@@ -23,84 +34,149 @@
    %label of the figure, which has to correspond to \ref{}:
    \label{fig:logo}
 \end{figure}
- 
-A two week break of the restoration of the aircraft will occur in
-August, as Mike Irvin takes a well-deserved holiday.
- 
-On Wednesday, August 14th, PNSAC will have its third annual golf day
-at the beautiful Loch March golf course starting at 10:00 A.M. with a
-nine minute separation between flights.  The format for the 18 holes
-will be a best ball game.
- 
-The club house at Loch March has an excellent breakfast menu so to
-make your day more enjoyable it is recommended we meet for breakfast
-before the game at 9:00 A.M.
- 
-Danielle Nadon, the Club Professional at Loch March has graciously
-given us two 18 hole passes for the winner of longest drive and
-closest to the pin.
- 
-You are encouraged to wear your distinctive PNSAC golf shirt and ball
-cap.  As before, guests are welcome.
- 
-Please email Danielle at \email{danielle@lochmarch.com} for booking, advising
-her that you are part of the Project North Star Day.  Please remember
-to send a copy of your e-mail to: \email{pnsac.specialevents@gmail.com}.
- 
-Please review the web site\\
-{\color{blue}\texttt{\url{http://www.lochmarch.com/about}}} to
-familiarize yourself with directions and dress code restrictions to
-make your day a ``Great Day at Loch March''.
 
-\begin{itemize}
-  \item Seniors mid week rate is \$48:00 and under 60 is \$58:00 plus
-    H.S.T
-  \item Power cart rental is \$15:49 per person for 18 holes plus
-    H.S.T.
-  \item Pull cart rental \$5:31 plus H.S.T.
-\end{itemize}
+The PNSAC 2013 Annual Golf Day at Loch March started with breakfast in
+the Club House, 14 members and friends in attendance.
 
+Prior to breakfast, start times were arranged in such a way that there
+was a mixing of participants, so that those who were not aware of what
+PNSAC does had the opportunity to talk to members involved in the
+project.
 
-\section{Montreal Area Control Centre and the Bombardier Aerospace  --
-Friday October 4, 2013}
-\label{sec:montreal}
+The first group started out in light rain showers and thirty minutes
+later the skies cleared for a bright sunny day. With the extra
+rainfall this year the course was found to be in a very lush
+condition, and as usual for Loch March the greens were very fast.
 
-Our Third planned Special Event, on Friday October 4th, is a trip to
-the Montreal Area Control Centre and the Bombardier Aerospace factory
-in Dorval.
+Danielle Nadon the Club Professional graciously gave PNSAC two 18 hole
+certificates as prizes, one for the closest to the pin and the other
+for the longest drive, which were both won by Gary Hall. He also came
+in with low gross for the day at 79. Our own Ron Lemieux was paired
+with Gary and in Ron's own words ``I had nothing to do with the score;
+I was riding on Gary's coat tails''.
 
-The Montreal Area Control Centre is a secure facility responsible for
-Radar Air Traffic Control in the Quebec region including northern
-Labrador up to Baffin Island. This tour will have us divided into
-smaller groups due to the requirement for quiet so as not to disturb
-the Air Traffic Controllers. For operational considerations this tour
-could be cancelled on short notice if there is a declared emergency or
-an emergency in progress.
+Loch March is a very wonderful facility for golf and has an excellent
+club house as well. The course can be challenging, but there is
+something for everyone who plays golf. Even if you do not golf, it is
+well worth the drive to enjoy the patio. For details please visit the
+web site: {\normalfont\color{blue}\texttt{\url{http://www.lochmarch.com}}}
 
-After a lunch break we will travel to the Bombardier factory in Dorval
-where the CRJ series jet aircraft are built.
+This year we had another prize which was given to us by New York New
+York Hair Salon, - a gift certificate of \$100:00 for hair
+services. So a new category of winner had to be chosen, which was for
+the best dressed in our distinctive PNSAC clothing. To ensure fairness
+in the award I had Alfredo Porco (who has been my barber for 30 years)
+make the award. It went to our "special seamstress" Karen Lochhead.  I
+should mention there are now three generations of Porcos at New York
+New York, - Alfredo, his son Vince and Vince's daughter Marina.
 
-For dinner we will proceed to the Willow Inn in Hudson before
-proceeding back to Ottawa.
+For information on New York New York please visit their web site:
+ {\normalfont\color{blue}\texttt{\url{http://www.nynyhairsalon.com}}}
 
-As this tour is now sold out we can accept bookings on a cancellation
-basis only.
+Looking forward to our fourth golf day next year, we will work on more
+prizes for our members and guests in 2014.
 
-To make a cancellation booking please email
-\email{pnsac.specialevents@gmail.com} to confirm you are willing to standby
-for this trip, and mail a non-refundable cheque payable to PNSAC for
-\$60:00 payable to PNSAC and in the cheque memo please put in Montreal
-trip. Please note this cheque will only be cashed if space becomes
-available and if no space becomes available the cheque will be
-destroyed.
+\section{Trip to the Montreal Area Control Centre and Bombardier Aerospace}
+\label{yultrip}
 
-Please mail the completed booking sheet and cheques to:
+On Friday October 4th, 33 members and guests departed the Canada
+Aviation Space Museum (CASM) for another planned special event. First
+off, special thanks to Bryon Mask (retired Air Canada Captain), one of
+our members who assisted me with contact information at Nav Canada
+which was required to have our visit approved. Bryon is a highly
+respected individual in Flight Safety and Accident Investigation in
+Canada.
 
-\address{PNSAC\\
-P.O.Box 44005\\
-514 Montreal Road\\
-Ottawa, ON\\
-K1K 4P8}
+We were met and welcomed by Richard Snider, Duty Manager at the
+Montreal ACC. We visited the Training Centre where training is
+provided to new Air Traffic Controllers and required recurrent
+training is offered. We were also shown the tower simulator which has
+a day/night 360 degree display where various airport scenarios can be
+brought up to assist in training. My personal favourite was the
+display showing a landing as seen from the cockpit, which even showed
+it as a 360 degree display (first time I have experienced the rear
+view mirror look for a landing).
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{yul_tca3.eps}
+   %caption of the figure 
+   \caption*{\small \em In the 360 degree tower simulator.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:tca3}
+\end{figure}
+
+Our next stop was the Technical Operations Centre where staff monitor
+all radar and computers. ACC has dual systems with one system picking
+up automatically in case the other system fails. Communications has a
+dual back-up digital and analogue system.  Communications to aircraft
+are by conventional VHF with some interesting back ups such as
+Controller Pilot Data Link Communications (CPDLC). The easiest way of
+explaining this is Text Messaging Sat Com in which either the aircraft
+can call the phone number of the ACC or the ACC can call the dedicated
+number for the aircraft (\$6:00 a minute cost) and as a back up by HF
+radio through a Flight Service Station.
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{yul_tca2.eps}
+   %caption of the figure 
+   \caption*{\small \em Air traffic controllers at work.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:tca2}
+\end{figure}
+
+In the Operations Room, we could hear some controllers talking very
+quietly. Radar displays offer a great deal of information to the
+Controller, which also helps keep talking to a minimum. A sense of
+humour prevailed at the work station for Northern Quebec up to
+Iqaluit, where a Motel 6 logo was mounted over the work station.
+
+In total we were on site for close to 2 1/2 hours which I found to be
+a fantastic experience, seeing the ATC environment from the other
+side.
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{yul_tca1.eps}
+   %caption of the figure 
+   \caption*{\small \em The Operations Room.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:tca1}
+\end{figure}
+
+With kind assistance in the form of a recommendation from Mae, my YUL
+expert, we broke off for lunch at Le D\'{e}jeuner Cosmopolitain which
+handled our group in a very friendly efficient manner. I should note,
+this is the spot where Air Canada retirees meet for their monthly
+luncheon dates.
+
+After lunch we proceeded to the Bombardier Production plant where we
+were met by three very knowledgeable tour guides. They were Alex
+Ritchie, Fernand Richer, and Cristian Racine who together gave a very
+informed hour and half tour of the production line. The tour was
+divided into two areas, assembly and finishing. At the beginning of
+the assembly we saw where the fuselage and wings are mated and
+proceeded on to where systems are tested such as hydraulic systems,
+then to the finishing area where interiors are installed. It was
+something to see how clean and bright this plant is and how the many
+sub assemblies come together. The tail assembly built in China comes
+to the production line and meets with part of the fuselage built in
+Mexico, just in time for the assembly.
+
+We ended our visit in the delivery room where customers pick up their
+aircraft all ready to go, all yours for approximately \$30 million
+dollars.
+
+We enjoyed an excellent dinner at the Auberge Willow Inn prior to our
+return to the CASM at the end of a very enjoyable 14 1/2 hour day
+together.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
