Newsletter: final changes incorporated.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -107,7 +107,7 @@ P.O.Box 44005\\
 Ottawa, ON\\
 K1K 4P8}\\
 
-\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{www.projectnorthstar.ca}}}}\\
+\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}}\\
 
 
 \begin{figure}
