--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -59,7 +59,7 @@ faded.
    %name of the graphic, without the path AND in EPS format:
    \includegraphics[scale=0.5]{galley_interior.eps}
    %caption of the figure 
-   \caption*{\small \em New galley -- interior view.}
+   \caption*{\small \em New galley complete.}
    %label of the figure, which has to correspond to \ref{}:
    \label{fig:galley_interior}
 \end{figure}
