--- a/pnsac/newsletter/article_Special.tex
+++ b/pnsac/newsletter/article_Special.tex
@@ -31,20 +31,20 @@ individual orders for the micro fleece vests shown in the photo on the
 left, and if you're looking for early Christmas presents, how about a
 coffee mug or a t-shirt?
 
-Have a look at our Facebook page,
+See our Facebook page,
 {\normalfont\color{blue}\texttt{\href{https://www.facebook.com/media/set/?set=a.610706705637878.1073741851.284829008225651&type=1}{PNSAC
-      Merchandise}}}, to see what we're offering, and place your
+      Merchandise}}}, for details about what we're offering, and place your
 orders by sending an email message to the following address
 \email{pnsac.merchandise@gmail.com}.
 
 For members in the Ottawa-Gatineau region, you can arrange to pick up
-your merchandise at the Canada Aviation and Space museum any Monday or
+your merchandise at the Canada Aviation and Space Museum any Monday or
 Tuesday, between 10:00 AM and 3:00 PM. We can also ship your purchases
 to you for an extra fee. Please specify museum pickup or shipping with
 your order.
 
 Merchandise is also available during our Quarterly Meetings
-at CAVM.
+at CASM.
 
 Look forward to hearing from you.
 
