--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -77,13 +77,13 @@ Take the finished product and then work backwards to determine the
 production stages.
 
 In the case of a formed sheet metal part a drawing of a flattened
-“blank” is produced by calculating bend radii and adding that to the
+blank is produced by calculating bend radii and adding that to the
 straight surfaces (in effect un-bending or stretching the finished
 part).  
 
 Experimental operations may be needed to find the shape and dimensions
-of the ``blanks''.  Tooling may be needed to produce the formed sheet
-metal parts.  The ``blanks'' are made by shearing and sawing, according
+of the blanks.  Tooling may be needed to produce the formed sheet
+metal parts.  The blanks are made by shearing and sawing, according
 to the parts drawing.
 
 In the case of a machined part, it is usually produced from bar stock:
