Removed text from article_Feature2.tex to match wrtier's original content.

--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -15,9 +15,9 @@
 There are no original parts or drawings for the seats. Fortunately,
 the tubing and brackets that connect the seats to the aircraft wall
 were still in place in the aircraft. Also, two lower tubing support
-brackets were found hiding behind the galley, allowing us to produce
-exact copies of the original. Everything else concerning the seats is
-missing and needs to  be replaced.
+brackets were found, allowing us to produce exact copies of the
+original. Everything else concerning the seats is missing and needs to
+be replaced.
 
 \end{multicols}
 
