Added package declarations for drop capitals and illuminated, or decorated, capitals.

--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -10,6 +10,10 @@
 \documentclass[a4paper]{report}
 
 
+% Use named colours (68 standard colours known to dvips)
+\usepackage[usenames,dvipsnames]{color}
+\usepackage{yfonts,color}
+
 \usepackage{amssymb,amsmath}
 
 % Note: Need to include amsmath before PNSAC, because the latter redefines the
@@ -36,6 +40,11 @@
 
 % Using subfigure package (for side-by-side images).
 \usepackage{subfigure}
+
+% Using package for Initial drop capitals
+\usepackage{lettrine}
+
+
 
 % ................................................................... %
 % Begin document .................................................... %
